--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="description" content="Cybersecurity professional with a background in data science and software development.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:400,700&display=swap">
+    <meta property="og:image" content="https://github.com/tylermneher/resume.tylermneher.me/raw/5d33e1ec5c703eb65df7d6508aff6392c3d4d4d6/tylermneher-header.png" />
+    <meta property="og:image:type" content="image/png" />
+    
     <style>:root {
   /* Colors */
   --primaryColor: #212529;
