--- a/index.html
+++ b/index.html
@@ -3,12 +3,17 @@
   <head>
     <meta charset="utf-8">
     <title>Tyler M. Neher</title>
-    <meta name="description" content="Cybersecurity professional with a background in data science and software development.">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:400,700&display=swap">
-    <meta property="og:image" content="https://github.com/tylermneher/resume.tylermneher.me/raw/5d33e1ec5c703eb65df7d6508aff6392c3d4d4d6/tylermneher-header.png" />
+    <meta property="og:title" content="Resume" />
+    <meta property="og:site_name" content="Tyler M. Neher's Resume" />
+    <meta property="og:irl" content="https://resume.tylermneher.me/" />
+    <meta name="og:description" content="Cybersecurity professional with a background in data science and software development.">
+    <meta property="og:image" content="https://raw.githubusercontent.com/tylermneher/resume.tylermneher.me/d47ab3a1f801edf0bc0c15005293a6bcff435852/og-image.png" />
     <meta property="og:image:type" content="image/png" />
     
+    
+    <meta name="viewport" content="width=device-width, user-scalable=no">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:400,700&display=swap">
+
     <style>:root {
   /* Colors */
   --primaryColor: #212529;
