--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Tyler M. Neher</title>
     <meta property="og:title" content="Resume" />
     <meta property="og:site_name" content="Tyler M. Neher's Resume" />
-    <meta property="og:irl" content="https://resume.tylermneher.me/" />
+    <meta property="og:url" content="https://resume.tylermneher.me/" />
     <meta name="og:description" content="Cybersecurity professional with a background in data science and software development.">
     <meta property="og:image" content="https://raw.githubusercontent.com/tylermneher/resume.tylermneher.me/d47ab3a1f801edf0bc0c15005293a6bcff435852/og-image.png" />
     <meta property="og:image:type" content="image/png" />
